@@ -1,7 +1,7 @@
 {
-  "timestamp" : "2022-04-15T08:09:52Z",
-  "count" : 17,
-  "count_minmax" : [ 12, 29 ],
+  "timestamp" : "2022-04-15T16:09:33Z",
+  "count" : 11,
+  "count_minmax" : [ 11, 29 ],
   "count_prev_day_inc" : 18,
   "count_prev_day_dec" : 0,
   "uniques" : 2,
