@@ -1,11 +1,11 @@
 {
-  "timestamp" : "2022-04-15T08:09:52Z",
-  "count" : 0,
-  "count_minmax" : [ 0, 0 ],
-  "count_prev_day_inc" : 0,
-  "count_prev_day_dec" : 12,
-  "uniques" : 0,
-  "uniques_minmax" : [ 0, 0 ],
-  "uniques_prev_day_inc" : 0,
+  "timestamp" : "2022-04-15T16:09:33Z",
+  "count" : 11,
+  "count_minmax" : [ 0, 11 ],
+  "count_prev_day_inc" : 11,
+  "count_prev_day_dec" : 18,
+  "uniques" : 1,
+  "uniques_minmax" : [ 0, 1 ],
+  "uniques_prev_day_inc" : 1,
   "uniques_prev_day_dec" : 0
 }
