@@ -1,10 +1,10 @@
 {
-  "count": 140,
+  "count": 145,
   "uniques": 2,
   "views": [
     {
       "timestamp": "2022-04-01T00:00:00Z",
-      "count": 17,
+      "count": 11,
       "uniques": 2
     },
     {
@@ -65,6 +65,11 @@
     {
       "timestamp": "2022-04-14T00:00:00Z",
       "count": 9,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-04-15T00:00:00Z",
+      "count": 11,
       "uniques": 1
     }
   ]
