@@ -1,3 +1,9 @@
+2022-04-15T16:09:33Z:
+* notice: last 14d: all unq: 145 2
+* notice: prev accum: outdated-all outdated-unq / all unq: 841 45 / 981 59
+* notice: next accum: outdated-all outdated-unq / all unq: 841 45 / 986 60
+* notice: prev json diff // prev day diff: unq all: +1 +11 / -0 -6 // +1 +11 / -0 -18
+
 2022-04-15T08:09:52Z:
 * notice: last 14d: all unq: 140 2
 * notice: prev accum: outdated-all outdated-unq / all unq: 841 45 / 993 59
